# sphinx

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/table1/: Claude4_5_Opus_Combined_group.tsv  Claude4_5_Opus_Combined_per_task.tsv  Claude4_5_Sonnet_Combined_group.tsv  Claude4_5_Sonnet_Combined_per_task.tsv  GeminiFlash3_Combined_group.tsv  GeminiFlash3_Combined_per_task.tsv  InternVL3-38B_mmr_gpt5score_group.tsv  InternVL3-38B_mmr_gpt5score_per_task.tsv  InternVL3-8B_mmr_gpt5score_group.tsv  InternVL3-8B_mmr_gpt5score_per_task.tsv  Llama-3.2-11B-Vision-Instruct_mmr_gpt5score_group.tsv  Llama-3.2-11B-Vision-Instruct_mmr_gpt5score_per_task.tsv  Qwen2.5-VL-30B-mmr_gpt5score_group.tsv  Qwen2.5-VL-30B-mmr_gpt5score_per_task.tsv  Qwen2.5-VL-3B-Instruct_mmr_gpt5score_group.tsv  Qwen2.5-VL-3B-Instruct_mmr_gpt5score_per_task.tsv  Qwen2.5-VL-7B-Instruct_mmr_gpt5score_group.tsv  Qwen2.5-VL-7B-Instruct_mmr_gpt5score_per_task.tsv  Qwen3-30B_gpt5score_group.tsv  Qwen3-30B_gpt5score_per_task.tsv  Qwen3-VL-235B-A22B-Instruct_mmr_gpt5score_group.tsv  Qwen3-VL-235B-A22B-Instruct_mmr_gpt5score_per_task.tsv  Qwen3-VL-4B-Instruct_mmr_gpt5score_group.tsv  Qwen3-VL-4B-Instruct_mmr_gpt5score_per_task.tsv  Qwen3-VL-8B-Instruct_mmr_gpt5score_group.tsv  Qwen3-VL-8B-Instruct_mmr_gpt5score_per_task.tsv  gpt-5-mini_mmr_gpt5score_group.tsv  gpt-5-mini_mmr_gpt5score_per_task.tsv  gpt-5-nano_mmr_gpt5score_group.tsv  gpt-5-nano_mmr_gpt5score_per_task.tsv  human_mmr_group.tsv  (+9 more)
demo/: build_demo_subset.py  examples.jsonl
docs/: index.html
tests/: test_generation.py  test_registry.py
(+102 files in other folders)
